test/files/pos/java-protected-inner-class/A.java
package a;
public class A {
  protected class I {}
  protected static class S{}
}
