test/files/neg/t1211b/I.java

class I {
	static class K {}
}
